--- a/style.css
+++ b/style.css
@@ -5,16 +5,17 @@
     align-items: center;
 }
 .main {
-    background-color:white;
+    background-color: white;
     height: 1080px;
-    padding: 0% 20% 0% 20%;
+    padding: 0% 15%;
 }
 .nav {
 justify-content: space-between;
 background-color: rgb(156, 136, 136);
 color: black;
-padding: 0% 20% 0% 20%;
-width: 500 px;
+padding: 0% 15%;
+/* width: 500 px; */
+margin: 0px 200px;
 }
 .blue {
     padding: 10px 10px 10px 10px;
@@ -24,21 +25,23 @@ width: 500 px;
     border-color: black; 
 }
 #searchbtn {
-    width: 400px;
+    width: 250px;
     text-align: left;
     border-color: black;
 }
 .columns {
     background-color: white;
+    width: 900px;
+    justify-content: center;
     /*height: 100%;*/
 }
-.col-1 {
+.right_column {
     padding: 15px;
     flex: 2;
     background-color: white;
     /**height: 100%;*/
 }
-.col-2 {
+.left_column {
     padding: 10px;
     flex: 3;
     background-color: white;
@@ -52,25 +55,25 @@ width: 500 px;
     border: 5px solid black;
     margin: 30px;
 }
-.topright {
+.top_right {
     border: 5px solid black;
     margin: 30px; 
 }
-.topleft1 {
+.top_left_ninja {
     padding: 20px;
     font-size: 20px;
 }
-.topleft2{
+.top_left_noun{
     justify-content:center;
     font-size: 20px;
     flex-wrap:wrap;
     padding: 0px 25px 0px 25px;
 }
-.bottomleft1 {
+.bottom_left_ninja {
     padding: 20px;
     font-size: 20px;
 }
-.bottomleft2 {
+.bottom_left_noun {
     justify-content: center;
     font-size: 20px;
     flex-wrap:wrap;
@@ -82,7 +85,7 @@ a {
 h .bold {
     font-weight: bold;
 }
-.topright1 {
+.top_right_inside {
     padding: 20px;
 }
 .yellow {
